kubernetes/infrastructure/base/traefik/rustfs-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: rustfs-endpoint
spec:
  ports:
    - name: s3
      port: 9000
      targetPort: 9000
      protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: rustfs-endpoint
subsets:
  - addresses:
      - ip: 192.168.1.131
    ports:
      - name: s3
        port: 9000
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: rustfs-console
spec:
  ports:
    - name: console
      port: 9001
      targetPort: 9001
      protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: rustfs-console
subsets:
  - addresses:
      - ip: 192.168.1.131
    ports:
      - name: console
        port: 9001
        protocol: TCP
