kubernetes/infrastructure/base/traefik/rustfs-synology.yaml
apiVersion: v1
kind: Service
metadata:
  name: rustfs-console
  namespace: storage
spec:
  type: ExternalName
  externalName: 192.168.1.131
  ports:
    - port: 9001
---
apiVersion: v1
kind: Service
metadata:
  name: rustfs-endpoint
  namespace: storage
spec:
  type: ExternalName
  externalName: 192.168.1.131
  ports:
    - port: 9000
