kubernetes/infrastructure/base/traefik/cloudflare-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudflare-tunnel
spec:
  ingressClassName: cloudflare-tunnel
  rules:
    - host: "teleport.theblacklodge.dev"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: teleport
                port:
                  number: 443
    - host: "*.theblacklodge.dev"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  number: 80
    - host: "*.austinsmith.org"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  number: 80
